모임 참여자에 대한 정보를 가지고 오는 기능 추가
