# server/api/meet/meet.dml.js
@@ -1,3 +1,5 @@
+/* eslint-disable arrow-body-style */
+// 통일성을 위한 disable처리
 const q = require('../../database/queryExcute');
 const query = require('./meet.query');
 
@@ -8,8 +10,13 @@ exports.getMeetUpInfos = (data) => {
     param.push(data.cond.cmntNo);
   }
 
-  return q.selectList( // 동적쿼리 생성
-    query.select.meetUpInfos.replace(/{CMNT_NO}/g, (data.cond.cmntNo && 'WHERE CRTE_CMNT_NO=?') || ''),
-    param,
-  );
+  // 동적쿼리 생성
+  query.select.meetUpInfos = query.select.meetUpInfos
+                            .replace(/{CMNT_NO}/g, (data.cond.cmntNo && 'WHERE CRTE_CMNT_NO=?') || '');
+
+  return q.selectList(query.select.meetUpInfos, param);
+};
+
+exports.getMeetUsersInfo = (data) => {
+  return q.selectList(query.select.meetUsersInfo, data.cond.meetNo);
 };
