# server/api/meet/meet.router.js
@@ -5,5 +5,5 @@ const ctrl = require('./meet.ctrl.js');
 
 router.get('/', ctrl.getMeetupInfos);
 router.get('/:cmntNo/', ctrl.getMeetupInfoByCmnt);
-
+router.get('/:meetNo/joinusers', ctrl.getMeetUsersInfo);
 module.exports = router;
